--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 :root {
   --light-gray: hsl(330, 2%, 64%);
-  --primary-color: cyan;
+  --primary-color: #003b6f;
   --roboto: "Roboto", sans-serif;
   --gugi: "Gugi", cursive;
   --sofia: "Sofia", cursive;
@@ -25,102 +25,28 @@ a {
 }
 
 /************Navigation bar**************/
+nav {
+  background-color: var(--primary-color);
+  font-size: 1.2rem;
+}
 
-.sidebar {
-  position: fixed;
-  width: 20%;
-  height: 100%;
-  background: #1b1b1b;
-  transition: left 0.4s ease;
-}
-.sidebar .text {
+nav li {
+  list-style-type: none;
   color: white;
-  font-size: 25px;
-  font-weight: 600;
-  line-height: 65px;
-  text-align: center;
-  background: #1e1e1e;
-  letter-spacing: 1px;
 }
-nav ul {
-  background: #1b1b1b;
-  height: 100%;
-  width: 100%;
-  list-style: none;
-}
-nav ul li {
-  line-height: 60px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-}
-nav ul li:last-child {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-}
-nav ul li a {
-  position: relative;
+
+nav a {
   color: white;
   text-decoration: none;
-  font-size: 18px;
-  padding-left: 40px;
-  font-weight: 500;
-  display: block;
-  width: 100%;
-  border-left: 3px solid transparent;
-}
-nav ul li.active a {
-  color: var(--primary-color);
-  background: #1e1e1e;
-  border-left-color: var(--primary-color);
-}
-nav ul li a:hover {
-  background: #1e1e1e;
-}
-nav ul ul {
-  position: static;
-}
-nav ul ul li {
-  line-height: 42px;
-  border-top: none;
-}
-nav ul ul li a {
-  font-size: 17px;
-  color: #e6e6e6;
-  padding-left: 80px;
-}
-nav ul li.active ul li a {
-  color: #e6e6e6;
-  background: #1b1b1b;
-  border-left-color: transparent;
-}
-nav ul ul li a:hover {
-  color: cyan !important;
-  background: #1e1e1e !important;
-}
-nav ul li a span {
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-  font-size: 22px;
-  transition: transform 0.4s;
-}
-nav ul li a span.rotate {
-  transform: translateY(-50%) rotate(-180deg);
 }
 
 /*************Slider****************/
-header {
-  width: 20vw;
-  position: relative;
-}
+
 main {
-  width: 80vw;
   position: relative;
-  border: 0;
-  margin-left: 20%;
 }
 .carousel,
 .carousel-item {
-  width: 80vw;
   height: 700px;
 }
 
@@ -138,6 +64,10 @@ main {
   padding: 0.1rem;
 }
 
+.carousel-caption h5 {
+  font-size: 1.8rem;
+}
+
 @media screen and (max-width: 1000px) and (min-width: 500px) {
   .carousel,
   .carousel-item {
@@ -152,7 +82,7 @@ main {
   }
 }
 h5 span {
-  font-size: 2rem;
+  font-size: 2.2rem;
 }
 /*************Store*************/
 .info {
@@ -184,7 +114,6 @@ h5 span {
 }
 
 .paralex {
-  width: 80vw;
   height: 500px;
   background-image: url("https://sph.washington.edu/sites/default/files/inline-images/coronavirus-image-1200x400.jpg");
   background-attachment: fixed;
@@ -212,4 +141,47 @@ h5 span {
 #grid img {
   width: 300px;
   height: 300px;
+}
+
+/*************tribute**************/
+#header {
+  align-items: center;
+  width: 100%;
+  height: 35px;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 0px;
+}
+#header:first-child {
+  font-size: 60px;
+}
+img.border-img {
+  margin-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  margin-bottom: 30px;
+}
+
+.card {
+  width: 100%;
+  height: 750px;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.card img {
+  width: 50%;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 0px 0px;
+}
+
+.doctors {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
 }
